# Beam-Playground

./: CMakeLists.txt  README.md  beamsolver.cpp  beamsolver.h  beamwidget.cpp  beamwidget.h  controlpanel.cpp  controlpanel.h  diagramwidget.cpp  diagramwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
